Protect: Fix Modal and Popover z-index conflict (#34752)
* Increase Modal z-index to surpass Popover settings

* changelog

--- a/projects/plugins/protect/src/js/components/modal/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/modal/styles.module.scss
@@ -9,7 +9,7 @@
     align-items: flex-start;
     padding-top: calc( var( --spacing-base ) * 12 + 2px ); // 98px
     background-color: rgba(0, 0, 0, 0.25);
-    z-index: 999999;
+    z-index: 1000001;
     overflow-y: auto;
 }
 
